--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
     <body>
         <h1>Hola mundo</h1>
         <p>Este es el primer archivo en mi nuevo repositorio Git</p>
+        <p>Una nueva linea en el archivo</p>
     </body>
 </html>
