Se agrego imagen a Hola mundo

--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
         <h1>Hola mundo</h1>
         <p>Este es el primer archivo en mi nuevo repositorio Git</p>
         <p>Una nueva linea en el archivo</p>
+        <div><img src="img_hola_mundo.png" alt="Hola mundo desde GTA" style="width:100%;max-width:960px"></div>
     </body>
 </html>
