Se actualizo index.html con la solucion de emergencia

--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
         <h1>Hola mundo</h1>
         <p>Este es el primer archivo en mi nuevo repositorio Git</p>
         <p>Una nueva linea en el archivo</p>
+        <p>Esta linea esta aqui para mostrar como funciona mezclar ramas y es nuestro error temporal</p>
     </body>
 </html>
