--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
         <p>Este es el primer archivo en mi nuevo repositorio Git</p>
         <p>Una nueva linea en el archivo</p>
         <div><img src="img_hola_mundo.png" alt="Hola mundo desde GTA" style="width:100%;max-width:960px"></div>
+        <div><img src="img_hola_git.png" alt="Hola Git" style="width:100%;max-width:640px"></div>
     </body>
 </html>
