Se agrego un titulo a index.html

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   </head>
   <body>
       <h1>Hola mundo</h1>
+      <h2>Siguiendo un tutorial de Git</h2>
       <div><img src="img_hola_mundo.png" alt="Hola mundo desde GTA" style="width:100%;max-width:640px"></div>
       <p>Este es el primer archivo en mi nuevo repositorio Git</p>
       <p>Una nueva linea en el archivo</p>
