Cambios a todo el contenido del repositorio

--- a/index.html
+++ b/index.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Hola mundo</title>
+    <title>Una página web sin ningún motivo</title>
       <link rel="stylesheet" href="bluestyle.css">
   </head>
   <body>
-      <h1>Hola mundo</h1>
-      <h2>Siguiendo un tutorial de Git</h2>
-      <div><img src="img_hola_mundo.png" alt="Hola mundo desde GTA" style="width:100%;max-width:640px"></div>
-      <p>Este es el primer archivo en mi nuevo repositorio Git</p>
-      <p>Una nueva linea en el archivo</p>
-      <p>Esta linea esta aqui para mostrar como funciona mezclar ramas y es nuestro error temporal</p>      
-      <div><img src="img_hola_git.png" alt="Hola Git" style="width:100%;max-width:640px"></div>
+      <h1>Una página web sin ningún motivo</h1>
+      <h2>Sin un título para esta página B)</h2>
+      <div><img src="img_gta.png" alt="GTA Online" style="width:100%;max-width:640px"></div>
+      <p>Este es el único archivo HTML en este repositorio Git</p>
+      <p>Una nueva linea en esta página</p>
+      <p>Esta linea no se porque está aquí :)</p>      
+      <div><img src="img_ue.png" alt="UE4" style="width:100%;max-width:640px"></div>
   </body>
 </html>
